--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 certifi==2018.10.15
 chardet==3.0.4
-cryptography==2.1.4
+cryptography
 Django==2.1.3
 httplib2==0.9.2
 lazy-object-proxy==1.3.1
@@ -12,8 +12,7 @@ numpy==1.15.4
 oauth==1.0.1
 olefile==0.45.1
 pandas==0.23.4
-psycopg2==2.7.6
-pycrypto==2.6.1
+psycopg2
 requests==2.20.1
 urllib3==1.24.1
 virtualenv==15.1.0
